src/tests/fixtures/arguments/TupleLiteralArgument.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
export default class Query {
  /** @GQLField */
  hello({ greeting }: { greeting: [string] }): string {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/TupleLiteralArgument.invalid.ts:4:35 - error: Unknown GraphQL type.

If you think Grats should be able to infer this type, please report an issue at https://github.com/captbaritone/grats/issues.

4   hello({ greeting }: { greeting: [string] }): string {
                                    ~~~~~~~~
